[package]
name = "rustbrush_app"
version = "0.1.0"
edition = "2021"

[dependencies]

# our crates
rustbrush_utils = { path = "../rustbrush_utils" }

# window manager
winit = "0.30.8"

# renderer, uses wgpu
pixels = "0.15.0"

# logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

# utils
pollster = "0.4.0"
